Libft/testlogs
clnicola@c2r7s4 ~/D/c/L/libftTester (master)> make
Already up to date.
If all your tests are OK and the moulinette KO you, please run the tester with valgrind (see README)
make -C /home/clnicola/Documents/cc/Libft
make[1]: Entering directory '/home/clnicola/Documents/cc/Libft'
libft.a
make[1]: Leaving directory '/home/clnicola/Documents/cc/Libft'
[Mandatory]
ft_memset	: 1.OK 2.OK 
ft_bzero	: 1.OK 2.OK 3.OK 
ft_memcpy	: 1.OK 2.OK 3.OK 
ft_memmove	: ==573640== Invalid read of size 1
==573640==    at 0x404CA9: ft_memmove (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573640==    by 0x4049E7: main (ft_memmove_test.cpp:25)
==573640==  Address 0x1fff001000 is not stack'd, malloc'd or (recently) free'd
==573640== 
1.SIGSEGV
ft_memchr	:
ft_memcmp	: 
ft_strlen	:
ft_isalpha	: 
ft_isdigit	: 
ft_isalnum	:
ft_isascii	:
ft_isprint	: 
ft_toupper	:
ft_tolower	:
ft_strchr	:
ft_strrchr	:
ft_strncmp	: 
ft_strlcpy   ---:  1.KO 2.KO 3.KO 4.OK 5.KO 6.OK 7.OK 8.OK 9.OK 
ft_strlcat	: 1.KO 2.KO 3.KO 4.KO 5.KO 6.KO 7.OK 8.KO 9.KO 10.OK 11.OK 12.OK 13.OK 14.OK 15.KO 16.KO 17.KO 
ft_strnstr	: 1.OK 2.OK 3.OK 4.OK 5.OK 6.OK 7.OK 8.OK 9.OK 10.OK 11.OK 12.OK 13.OK 14.OK 
ft_atoi		: 1.OK 2.OK 3.KO 4.KO 5.OK 6.OK 7.OK 8.OK 9.OK 10.OK 11.OK 12.KO 13.KO 14.OK 15.OK 16.OK 17.OK 
ft_calloc	: 1.OK 2.MOK 3.KO 4.OK 5.OK 6.OK 7.OK 8.OK 9.KO 10.OK 11.OK ==573892== Argument 'size' of function malloc has a fishy (possibly negative) value: -15
==573892==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573892==    by 0x404C75: ft_calloc (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573892==    by 0x404B4E: main (ft_calloc_test.cpp:44)
==573892== 
12.OK ==573892== Argument 'size' of function malloc has a fishy (possibly negative) value: -15
==573892==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573892==    by 0x404C75: ft_calloc (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573892==    by 0x404B76: main (ft_calloc_test.cpp:45)
==573892== 
13.OK 
==573892== 1 bytes in 1 blocks are definitely lost in loss record 1 of 2
==573892==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573892==    by 0x404C75: ft_calloc (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573892==    by 0x40498D: main (ft_calloc_test.cpp:25)
==573892== 
==573892== 25 bytes in 1 blocks are definitely lost in loss record 2 of 2
==573892==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573892==    by 0x404C75: ft_calloc (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573892==    by 0x404AAA: main (ft_calloc_test.cpp:39)
==573892== 
ft_strdup	: 1.OK 2.MOK 3.OK 4.MOK 
ft_substr	: 1.OK 2.MKO 3.OK 4.MOK 5.KO 6.MKO ==573920== Invalid read of size 1
==573920==    at 0x404DA7: ft_substr (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573920==    by 0x404A73: main (ft_substr_test.cpp:32)
==573920==  Address 0x4def5aa is 26 bytes after a block of size 16 in arena "client"
==573920== 
7.OK 8.MKO 9.OK 10.MKO 11.OK 12.MOK 13.OK 14.MOK 15.OK 16.MOK 
ft_strjoin	: 1.OK 2.MOK 3.OK 4.MOK 5.OK 6.MOK 7.OK 8.MOK 
ft_strtrim	: 1.OK 2.MOK ==573948== Invalid write of size 1
==573948==    at 0x404F13: ft_strlcpy (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x404DF4: ft_strtrim (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x404987: main (ft_strtrim_test.cpp:23)
==573948==  Address 0x4de503b is 0 bytes after a block of size 11 alloc'd
==573948==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573948==    by 0x404DBB: ft_strtrim (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x404987: main (ft_strtrim_test.cpp:23)
==573948== 
3.KO 4.MOK ==573948== Invalid write of size 1
==573948==    at 0x404F13: ft_strlcpy (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x404DF4: ft_strtrim (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x4049ED: main (ft_strtrim_test.cpp:27)
==573948==  Address 0x4de50db is 0 bytes after a block of size 11 alloc'd
==573948==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573948==    by 0x404DBB: ft_strtrim (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x4049ED: main (ft_strtrim_test.cpp:27)
==573948== 
5.KO 6.MOK ==573948== Argument 'size' of function malloc has a fishy (possibly negative) value: -18
==573948==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573948==    by 0x404DBB: ft_strtrim (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573948==    by 0x404A53: main (ft_strtrim_test.cpp:31)
==573948== 
==573948== Invalid read of size 1
==573948==    at 0x484FBD4: strcmp (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573948==    by 0x404A6B: main (ft_strtrim_test.cpp:32)
==573948==  Address 0x0 is not stack'd, malloc'd or (recently) free'd
==573948== 
7.SIGSEGV
ft_split	: 1.MOK 2.OK 3.MOK 4.OK 5.MOK 6.OK 7.OK 8.OK 9.OK 10.OK 11.MOK ==573962== Invalid read of size 1
==573962==    at 0x484FBD4: strcmp (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573962==    by 0x404BB4: main (ft_split_test.cpp:54)
==573962==  Address 0x0 is not stack'd, malloc'd or (recently) free'd
==573962== 
12.SIGSEGV
ft_itoa		: 1.OK 2.MOK ==573976== Invalid write of size 1
==573976==    at 0x405478: ft_itoa (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573976==    by 0x404A50: main (ft_itoa_test.cpp:24)
==573976==  Address 0x4de502f is 1 bytes before a block of size 2 alloc'd
==573976==    at 0x4848899: malloc (in /usr/libexec/valgrind/vgpreload_memcheck-amd64-linux.so)
==573976==    by 0x40541E: ft_itoa (in /home/clnicola/Documents/cc/Libft/libftTester/a.out)
==573976==    by 0x404A50: main (ft_itoa_test.cpp:24)
==573976== 
3.KO 4.MKO 5.KO 6.MKO 7.OK 8.MOK 9.OK 10.MOK 11.OK 12.MOK 
ft_strmapi	: 1.OK 2.MOK 3.OK 4.MOK 
ft_putchar_fd	: 1.OK 
ft_putstr_fd	: 1.OK 
ft_putendl_fd	: 1.OK 
ft_putnbr_fd	: 1.OK 2.OK 3.OK 4.OK 5.OK 
ft_striteri	: 1.OK 2.OK 3.OK 
make bonus -C /home/clnicola/Documents/cc/Libft
make[1]: Entering directory '/home/clnicola/Documents/cc/Libft'
cc    -c -o ft_atoi.o ft_atoi.c
cc    -c -o ft_isalpha.o ft_isalpha.c
cc    -c -o ft_memchr.o ft_memchr.c
cc    -c -o ft_memset.o ft_memset.c
cc    -c -o ft_strlcat.o ft_strlcat.c
cc    -c -o ft_strnstr.o ft_strnstr.c
cc    -c -o ft_tolower.o ft_tolower.c
cc    -c -o ft_bzero.o ft_bzero.c
cc    -c -o ft_isascii.o ft_isascii.c
cc    -c -o ft_memcmp.o ft_memcmp.c
cc    -c -o ft_strchr.o ft_strchr.c
cc    -c -o ft_strlcpy.o ft_strlcpy.c
cc    -c -o ft_strrchr.o ft_strrchr.c
cc    -c -o ft_toupper.o ft_toupper.c
cc    -c -o ft_calloc.o ft_calloc.c
cc    -c -o ft_isdigit.o ft_isdigit.c
cc    -c -o ft_memcpy.o ft_memcpy.c
cc    -c -o ft_strdup.o ft_strdup.c
cc    -c -o ft_strlen.o ft_strlen.c
cc    -c -o ft_strtrim.o ft_strtrim.c
cc    -c -o ft_isalnum.o ft_isalnum.c
cc    -c -o ft_isprint.o ft_isprint.c
cc    -c -o ft_memmove.o ft_memmove.c
cc    -c -o ft_strjoin.o ft_strjoin.c
cc    -c -o ft_strncmp.o ft_strncmp.c
cc    -c -o ft_substr.o ft_substr.c
cc    -c -o ft_split.o ft_split.c
cc    -c -o ft_strmapi.o ft_strmapi.c
cc    -c -o ft_striteri.o ft_striteri.c
cc    -c -o ft_itoa.o ft_itoa.c
cc    -c -o ft_putchar_fd.o ft_putchar_fd.c
cc    -c -o ft_putstr_fd.o ft_putstr_fd.c
cc    -c -o ft_putendl_fd.o ft_putendl_fd.c
cc    -c -o ft_putnbr_fd.o ft_putnbr_fd.c
ar rc libft.a ft_atoi.o ft_isalpha.o ft_memchr.o ft_memset.o ft_strlcat.o ft_strnstr.o ft_tolower.o ft_bzero.o ft_isascii.o ft_memcmp.o ft_strchr.o ft_strlcpy.o ft_strrchr.o ft_toupper.o ft_calloc.o ft_isdigit.o ft_memcpy.o ft_strdup.o ft_strlen.o ft_strtrim.o ft_isalnum.o ft_isprint.o ft_memmove.o ft_strjoin.o ft_strncmp.o ft_substr.o ft_split.o ft_strmapi.o ft_striteri.o ft_itoa.o ft_putchar_fd.o ft_putstr_fd.o ft_putendl_fd.o ft_putnbr_fd.o 
ranlib libft.a
libft.a with bonus created.
make[1]: Leaving directory '/home/clnicola/Documents/cc/Libft'
[Bonus]
tests/ft_lstnew_test.cpp:19:16: error: use of undeclared identifier 'ft_lstnew'
        t_list * l =  ft_lstnew((void*)42);
                      ^
1 error generated.
make: *** [Makefile:27: lstnew] Error 1
clnicola@c2r7s4 ~/D/c/L/libftTester (master) [2]> 

